# sispopnet

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  module.modulemap  readme.md  readme_es.md  run-sispopnet.bat  sispopnet-bootstrap  sispopnet-docker.ini
.github/ISSUE_TEMPLATE/: bug_report.md
android/: AndroidManifest.xml  build.gradle  build.xml  settings.gradle
cmake/: GenVersion.cmake  basic_definitions.cmake  shadow.cmake
contrib/apparmor/: usr.bin.sispopnet
contrib/bootserv/: .gitignore  makefile  readme.md
contrib/bootstrap/: readme.txt
contrib/cluster-shell/: clear-nodedbs.sh  init.sh  makenode.sh  start.sh  stop.sh
contrib/dtrace/: sispopnet.xml
contrib/kubernetes/: kubernetes.yaml  sispop-daemonset.yaml  sispop-deployment.yaml  sispopnet-service.yaml
contrib/munin/: sispopnet-munin.py
daemon/: CMakeLists.txt  main.cpp  sispopnetctl.cpp
debian/: changelog  control  copyright  postinst  sispop-service-nodes.7  sispopnet-bootstrap.1  sispopnet.1  sispopnet.install  sispopnet.manpages  sispopnet.service
docker/: router.Dockerfile  sispop-svc-kubernetes.Dockerfile
docs/: README  api_v0.txt  high-level.txt  linux-setcap-readme.txt  proto_v0.txt  sispopnet_admin_v0.txt
include/: llarp.h
jni/: CMakeLists.txt  network_sispop_sispopnet_SispopnetConfig.h  network_sispop_sispopnet_SispopnetDaemon.h  network_sispop_sispopnet_SispopnetVPN.h  network_sispop_sispopnet_SispopnetVPN_VPNInfo.h  network_sispop_sispopnet_Sispopnet_JNI.h  sispopnet_config.cpp  sispopnet_daemon.cpp  sispopnet_jni_common.hpp  sispopnet_jni_vpnio.hpp  sispopnet_vpn.cpp
libabyss/: main.cpp
llarp/: CMakeLists.txt  testnet.c
osx-setup/: distribution.xml  make-release.sh
ui-ios/: CMakeLists.txt
ui-macos/: WindowsManager.swift
ui-win32/: AboutBox.Designer.cs  AboutBox.cs  App.config  LogDumper.cs  Program.cs  Settings.cs  UIMain.Designer.cs  UIMain.cs  UserSettings.Designer.cs  UserSettings.cs  VisualSettings.Designer.cs  VisualSettings.cs  dlgBootstrap.Designer.cs  dlgBootstrap.cs  dlgBootstrap.resx  sispopvpn.csproj  sispopvpn.sln
win32-setup/: Makefile  config_migration.bat  notes.txt  regdb_helper.c  sispopnet-win32.iss
(+98 files in other folders)
